# cpc-telemetry-viewer

./: README.md  app.py  data_refresh.py  log_data.py  pull_telemetry.sh  pyproject.toml  telemetry_data.py
deploy/: com.example.cpc-telemetry-viewer.plist  cpc-telemetry-viewer.service
